# fsega_ie2_dsa

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/lab1/: lab1_1.c  lab1_1.h  lab1_1_main.c  lab1_2.c  lab1_2.h  lab1_2_main.c  lab1_3.c  lab1_3.h  lab1_3_main.c
src/lab2/: lab2_1.c  lab2_1.h  lab2_1_main.c  lab2_2.c  lab2_2.h  lab2_2_main.c
